# mining-daily-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  RUN.md  app.py  docker-compose.yml  mcp-config.json  pyproject.toml
agent/: graph.py  prompts.py  report.py  run.py
servers/: _mock_data.py  lme_price.py  mineral_pdf.py  mining_news.py
tests/: test_agent.py  test_lme_price.py  test_mineral_pdf.py  test_mining_news.py
